# impactu_marie_agent

./: .env.example  .gitignore  LICENSE  NEXT_IMPROVEMENTS.md  OPENSEARCH_EXPERT_TEST_SUMMARY.md  PLANNING_IMPROVEMENTS.md  README.md  REFACTORING_ANALYSIS.md  demo_magentic.py  demo_simple.py  download_models.py  index_all_collections.sh  pyproject.toml  test_agent_system.py  test_improvements.py  test_retry_logic.py
.github/: AI_AGENT_PROFILE.md  copilot-instructions.md
docs/: USAGE.md  cris_magentic_multiagent_architecture.md  hexagonal_architecture.md  human_in_the_loop.md  impactu_urls_and_endpoints.md  kahi_rag_implementation.md  langgraph_best_practices.md  magentic_architecture_plan.md  magentic_complete_implementation.md  magentic_implementation_summary.md  system_requirements.md
marie_agent/: __init__.py  cli.py  cli_chat.py  cli_real.py  config.py  graph.py  human_interaction.py  llm.py  memory.py  orchestrator.py  state.py  tools.py
marie_agent/adapters/: fallback_adapter.py  llm_factory.py  ollama_adapter.py  vllm_adapter.py
marie_agent/agents/: __init__.py  citations.py  entity_resolution.py  metrics.py  opensearch_expert.py  opensearch_expert.py.bak  prompt_engineer.py  reporting.py  retrieval.py
marie_agent/core/: action_guard.py  async_ops.py  base_agent.py  cache.py  cache_redis.py  context_window.py  exceptions.py  memory.py  memory_opensearch.py  metrics.py  observability.py  opensearch_manager.py  plan_generator.py  progress_ledger.py  quality_evaluator.py  routing.py  session_manager.py  state_models.py
marie_agent/ports/: llm_port.py
marie_agent/services/: colombian_detector.py  language_detector.py
rag_indexer/: .env.example  README.md  __init__.py  cli.py  colombia_indexer.py  config.py  indexer.py  opensearch_manager.py  pyproject.toml  requirements.txt  text_processing.py
rag_indexer/examples/: colombian_indexing_example.py
tests/: __init__.py  test_advanced_features.py  test_agent_system.py  test_magentic_components.py  test_magentic_e2e.py  test_opensearch_memory.py
