[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impactu-marie-agent"
version = "1.0.0"
description = "MARIE - Multi-Agent Research Intelligence Engine with Magentic orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Colav", email = "grupocolav@udea.edu.co"}
]
keywords = ["ai", "agents", "research", "nlp", "rag", "magentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
    "langserve>=0.0.30",
    "opensearch-py>=2.3.0",
    "pymongo>=4.5.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
marie_chat = "marie_agent.cli_chat:main"
marie_index = "rag_indexer.cli:main"

[project.urls]
Homepage = "https://github.com/colav-playground/impactu_marie_agent"
Repository = "https://github.com/colav-playground/impactu_marie_agent"
Documentation = "https://github.com/colav-playground/impactu_marie_agent/tree/main/docs"

[tool.setuptools]
packages = ["marie_agent", "marie_agent.core", "marie_agent.agents", "marie_agent.adapters", "marie_agent.ports", "marie_agent.services", "rag_indexer"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
