[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impactu-rag-indexer"
version = "1.0.0"
description = "RAG indexer for KAHI MongoDB to OpenSearch with BGE-M3 embeddings"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Colav", email = "colav@udea.edu.co"}
]
keywords = [
    "rag", 
    "embeddings", 
    "opensearch", 
    "mongodb", 
    "kahi", 
    "impactu",
    "semantic-search",
    "vector-search",
    "bge-m3"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "pymongo>=4.6.0",
    "opensearch-py>=2.4.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
rag-indexer = "rag_indexer.cli:main"

[project.urls]
Homepage = "https://github.com/colav-playground/impactu_marie_agent"
Repository = "https://github.com/colav-playground/impactu_marie_agent"
Documentation = "https://github.com/colav-playground/impactu_marie_agent/tree/main/rag_indexer"
Issues = "https://github.com/colav-playground/impactu_marie_agent/issues"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "examples*", "__pycache__"]

[tool.setuptools.package-data]
"*" = ["*.md"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
